# binaryen.ml

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  README.md  binaryen.opam  binaryen_js.opam  binaryen_virtual.opam  dune  dune-project  dune-workspace  esy.json  package.json
.github/workflows/: ci.yml  escaping.yml  esy.yml  opam-publish.yml  opam.yml  release-please.yml  release.yml
binaryen_js/: dune  memory.ml  module.ml
config/: discover.ml  dune  link_flags.ml
esy.lock/: index.json
esy.lock/overrides/opam__s__js__of__ocaml_opam__c__4.0.0_opam_override/: package.json
js/: binaryen.js  dune  element_segment.ml  export.ml  expression.ml  features.ml  function.ml  function_table.ml  global.ml  import.ml  literal.ml  memory.ml  module.ml  op.ml  postlude.js  prelude.js  settings.ml  stubs.c  table.ml  type.ml
src/: array_type.c  array_type.js  array_type.ml  array_type.mli  binaryen_stubs_exports.c  binaryen_stubs_exports.cpp  binaryen_stubs_exports.js  binaryen_stubs_expressions.c  binaryen_stubs_expressions.cpp  binaryen_stubs_expressions.js  binaryen_stubs_features.c  binaryen_stubs_features.cpp  binaryen_stubs_features.js  binaryen_stubs_function_tables.c  binaryen_stubs_function_tables.cpp  binaryen_stubs_functions.c  binaryen_stubs_functions.cpp  binaryen_stubs_functions.js  binaryen_stubs_globals.c  binaryen_stubs_globals.cpp  binaryen_stubs_globals.js  binaryen_stubs_heap_types.c  binaryen_stubs_heap_types.js  binaryen_stubs_imports.c  binaryen_stubs_imports.cpp  binaryen_stubs_imports.js  binaryen_stubs_literals.c  binaryen_stubs_literals.cpp  binaryen_stubs_literals.js  binaryen_stubs_memory.c  binaryen_stubs_memory.cpp  binaryen_stubs_memory.js  binaryen_stubs_modules.c  binaryen_stubs_modules.cpp  binaryen_stubs_modules.js  binaryen_stubs_ops.c  binaryen_stubs_ops.cpp  binaryen_stubs_ops.js  binaryen_stubs_packed_types.js  binaryen_stubs_settings.c  (+102 more)
src/.github/workflows/: ci.yml
src/binaryen/: binaryen_stubs_exports.c  dune  import.ml  module.ml
src/binaryen_js/: dune
src/binaryen_virtual/: memory.mli
src/config/: dune  library_flags.ml
src/js/: dune  export.ml
src/native/: binaryen_stubs_literals.c  expression.ml  function_table.ml  global.ml  literal.ml  ocaml_helpers.h  op.ml
src/virtual/: features.mli  literal.mli
test/: dune  element_segment_test.re  export_test.re  expression_test.re  framework.re  framework.rei  functionTest.re  function_test.re  global_test.re  import_test.re  literal_test.re  memory_test.re  module.re  moduleTest.re  module_test.re  settingsTest.re  settings_test.re  table_test.re  test.expected  test.ml  test.re  test_js.expected  type_test.re
test/config/: dune  ocamlopt_flags.ml
virtual/: dune  element_segment.mli  export.mli  expression.mli  features.mli  function.mli  function_table.mli  global.mli  import.mli  literal.mli  memory.mli  module.mli  op.mli  settings.mli  table.mli  type.mli
