opam-version: "2.0"
version: "0.22.0"
synopsis: "OCaml bindings for Binaryen"
maintainer: "oscar@grain-lang.org"
author: "Oscar Spencer"
license: " Apache-2.0"
homepage: "https://github.com/grain-lang/binaryen.ml"
dev-repo: "git+https://github.com/grain-lang/binaryen.ml.git"
bug-reports: "https://github.com/grain-lang/binaryen.ml/issues"
build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "3.0.0"}
  "dune-configurator" {>= "3.0.0"}
  "js_of_ocaml-compiler" {>= "4.1.0" < "6.0.0"}
  "libbinaryen" {>= "113.0.0" < "114.0.0"}
]
pin-depends: [
  ["libbinaryen.113.0.0" "git+https://github.com/grain-lang/libbinaryen#8c9f37b13cf7a4ec8de15ef428f9e9f10be55bb8"]
]
