opam-version: "2.0"
version: "0.27.0"
synopsis: "OCaml bindings for Binaryen"
maintainer: "oscar@grain-lang.org"
author: "Oscar Spencer"
license: " Apache-2.0"
homepage: "https://github.com/grain-lang/binaryen.ml"
dev-repo: "git+https://github.com/grain-lang/binaryen.ml.git"
bug-reports: "https://github.com/grain-lang/binaryen.ml/issues"
build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "3.0.0"}
  "dune-configurator" {>= "3.0.0"}
  "js_of_ocaml-compiler" {>= "6.0.0" < "7.0.0"}
  "libbinaryen" {> "118.0.0" < "119.0.0"}
]
x-maintenance-intent: ["0.(latest)"]
