(library
 (name binaryen_js)
 (public_name binaryen.js)
 (implements binaryen)
 (libraries js_of_ocaml)
 (preprocess
  (pps js_of_ocaml-ppx))
 (foreign_stubs
  (language c)
  (names stubs))
 (js_of_ocaml
  (flags --no-sourcemap)
  (javascript_files binaryen.js postlude.js)))

(rule
 (target binaryen.js)
 (action
  (copy ../vendor/js/index.es5.js binaryen.js)))
