(library
 (name binaryen)
 (public_name binaryen)
 (libraries libbinaryen.c)
 (foreign_stubs
  (language c)
  (names
   type
   op
   literal
   expression
   function
   import
   export
   global
   table
   memory
   module_feature
   module
   settings
   packed_type
   heap_type
   struct_type
   type_system
   ocaml_helpers)
  (flags :standard -O2 -Wall -Wextra))
 (js_of_ocaml
  (javascript_files
   type.js
   op.js
   literal.js
   expression.js
   function.js
   import.js
   export.js
   global.js
   table.js
   memory.js
   module_feature.js
   module.js
   settings.js
   packed_type.js
   heap_type.js
   struct_type.js
   type_system.js)))
