(library
 (name binaryen)
 (public_name binaryen)
 (libraries libbinaryen.c)
 (foreign_stubs
  (language c)
  (names
   binaryen_stubs_types
   binaryen_stubs_ops
   binaryen_stubs_literals
   binaryen_stubs_expressions
   binaryen_stubs_functions
   binaryen_stubs_imports
   binaryen_stubs_exports
   binaryen_stubs_globals
   binaryen_stubs_tables
   binaryen_stubs_memory
   binaryen_stubs_features
   binaryen_stubs_settings
   ocaml_helpers)
  (flags :standard -O2 -Wall -Wextra))
 (foreign_stubs
  (language cxx)
  (names binaryen_stubs_modules ocaml_cpp_helpers)
  (flags :standard -O2 -Wall -Wextra))
 (js_of_ocaml
  (javascript_files
   binaryen_stubs_types.js
   binaryen_stubs_ops.js
   binaryen_stubs_literals.js
   binaryen_stubs_expressions.js
   binaryen_stubs_functions.js
   binaryen_stubs_imports.js
   binaryen_stubs_exports.js
   binaryen_stubs_globals.js
   binaryen_stubs_tables.js
   binaryen_stubs_memory.js
   binaryen_stubs_features.js
   binaryen_stubs_modules.js
   binaryen_stubs_settings.js)))
