(library
 (name binaryen)
 (public_name binaryen)
 (libraries libbinaryen.c)
 (foreign_stubs
  (language c)
  (names
   array_type
   type
   op
   literal
   expression
   function
   import
   export
   global
   table
   memory
   module_feature
   module
   settings
   packed_type
   heap_type
   signature_type
   struct_type
   ocaml_helpers)
  (flags :standard -O2 -Wall -Wextra))
 (js_of_ocaml
  (javascript_files
   array_type.js
   type.js
   op.js
   literal.js
   expression.js
   function.js
   import.js
   export.js
   global.js
   table.js
   memory.js
   module_feature.js
   module.js
   settings.js
   packed_type.js
   heap_type.js
   signature_type.js
   struct_type.js)))
