(test
 (name test)
 (modules test)
 (libraries binaryen)
 (ocamlopt_flags
  (:include ./config/ocamlopt_flags.sexp))
 (action
  (run %{test})))

; Tests for binaryen.js implementation

(rule
 (target test_js.ml)
 (action
  (progn
   (copy %{dep:test.ml} %{target})
   (copy test.expected test_js.expected))))

(test
 (name test_js)
 (enabled_if
  (<> %{system} mingw64))
 (modules test_js)
 (modes
  (byte js))
 (libraries binaryen)
 (action
  (run node %{dep:test_js.bc.js}))
 (js_of_ocaml
  (flags --no-sourcemap --disable share)))
