(test
 (name test)
 (modules test)
 (libraries binaryen)
 (modes exe)
 (flags
  :standard
  (:include ./config/ocamlopt_flags.sexp)))

; Tests for binaryen.js implementation

(rule
 (target test_js.ml)
 (action
  (progn
   (copy %{dep:test.ml} %{target})
   (copy test.expected test_js.expected))))

(test
 (name test_js)
 (enabled_if
  (= %{bin-available:node} true))
 (modules test_js)
 (libraries binaryen)
 (modes js)
 (js_of_ocaml
  (flags --no-sourcemap)))
