(executable
 (name test)
 (libraries binaryen)
 (modes exe js)
 (flags
  :standard
  (:include ./config/ocamlopt_flags.sexp)))

(rule
 (alias runtest)
 (action
  (progn
   (with-stdout-to
    test.out
    (run %{exe:test.exe}))
   (diff test.out test.expected))))

(rule
 (alias runtest)
 (enabled_if
  (= %{bin-available:node} true))
 (action
  (progn
   (with-stdout-to
    test_js.out
    (run node %{dep:test.bc.js}))
   (diff test_js.out test.expected))))
